[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
get_inputs = { git = "https://github.com/jemand2001/advent_of_code_inputs" }
regex = "1.7.0"
tokio = { version = "1.22.0" }
